--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
   "name": "1.4-unit_test",
   "version": "1.0.0",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "jest"
+  },
   "author": "David Ervin",
   "license": "ISC",
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
